# conveyor-agent

./: .gitignore  .gitreview  .testr.conf  README.rst  conveyoragent_watchdog.sh  requirements  requirements.txt  setup.cfg  tox.ini
conveyoragent/: context.py  exception.py  i18n.py  manager.py  opts.py  policy.py  service.py  ssh_utils.py  utils.py  version.py  wsgi.py
conveyoragent/brick/: base.py  exception.py  executor.py  utils.py
conveyoragent/cmd/: conveyoragent_api.py
conveyoragent/common/: _i18n.py  config.py  eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  imageutils.py  jsonutils.py  log.py  loopingcall.py  periodic_task.py  policy.py  processutils.py  service.py  strutils.py  threadgroup.py  timeutils.py  versionutils.py
conveyoragent/conveyor/: __init__.py  conveyor.py
conveyoragent/conveyoragentclient/: client.py
conveyoragent/conveyoragentclient/common/: base.py
conveyoragent/conveyoragentclient/v1/: client.py  conveyorgatewayservice.py
conveyoragent/engine/api/: __init__.py  common.py  extensions.py  xmlutil.py
conveyoragent/engine/common/: task_status.py  transformer.py  transformer_state.py
conveyoragent/engine/server/: manager.py
conveyoragent/middleware/: auth.py  fault.py  request_id.py  sizelimit.py
doc/: README
etc/conveyoragent/: api-paste.ini  conveyoragent-config-generator.conf  hybrid-v2v.conf  rootwrap.conf
etc/conveyoragent/rootwrap.d/: v2vgateway.filters
tools/: conveyor-agent  conveyor-agent.conf  conveyor-rootwrap  conveyoragent  conveyoragent.service  fillp  install.sh  uninstall.sh
(+11 files in other folders)
