[metadata]
name = conveyoragent
summary = OpenStack clone/migrate service agent
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conveyoragent

data_files =
    /etc/ = etc/*

[entry_points]
oslo.config.opts =
    conveyoragent = conveyoragent.opts:list_opts

console_scripts =
    conveyoragent = conveyoragent.cmd.conveyoragent_api:main
    conveyoragent-rootwrap = oslo_rootwrap.cmd:main
